--- a/contatos.html
+++ b/contatos.html
@@ -6,6 +6,7 @@
     <title>Contato</title>
 </head>
 <body>
-    
+    <h1>contatos</h1>
+    <p>entre em contato pelo email@email.com</p>
 </body>
 </html>
